# claude-account-switcher

./: .vscodeignore  CHANGELOG.md  README.md  package.json
.devcontainer/: devcontainer.json
media/: panel.css  panel.js
server/: .dockerignore  .gitignore  Dockerfile  README.md  build-multiarch.sh  docker-compose.yml  pyproject.toml
server/multiarch/: Dockerfile  build-and-push.sh
server/src/claude_switcher_sync/: __init__.py  app.py  auth.py  config.py  db.py  ratelimit.py
server/tests/: conftest.py  test_auth.py  test_isolation.py  test_locks.py  test_logging.py  test_pool.py  test_usage_monotonic.py
src/: accountStore.ts  atomicWrite.ts  credentials.ts  extension.ts  identity.ts  lockFile.ts  migrate.ts  oauth.ts  secretVault.ts  store.ts  switchService.ts  syncStore.ts  timeFmt.ts  types.ts  usage.ts
src/serverSync/: crypto.ts  http.ts  migrateFolder.ts  remoteVault.ts  rotationRecovery.ts  serverStore.ts  session.ts
src/ui/: accountsView.ts  statusBar.ts
test/: fakeSyncServer.ts  serverSmoke.ts  smoke.ts
