[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-switcher-sync"
version = "0.1.0"
description = "Self-hosted sync server for the Claude Multi-Account Switcher VS Code extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
claude-switcher-sync = "claude_switcher_sync.app:main"

[tool.setuptools.packages.find]
where = ["src"]
